<resources>
    <string name="app_name">Kitaab</string>
    <string name="menuItem1">Home</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="registerPageText">Have an account? Login</string>
    <string name="loginPageText">Do not have an account? Sign up now</string>
    <string name="menuItem2">Your library</string>
    <string name="menuItem3">Publish a story</string>
    <string name="menuItem4">Community</string>
    <string name="menuItem5">Sign out</string>
    <string name="addToFav">Add to favourites</string>
    <string name="rating">User reviews</string>
    <string name="remove">Remove</string>
    <string name="uploadImage">Select cover image</string>
    <string name="uploadBook">Select book pdf</string>
    <string name="publish">Publish</string>
    <string name="delete">Delete</string>
    <string name="empty">Empty</string>
    <string name="rate">Rate:</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="pwd">Password</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="selectGen">Select Genre</string>
    <string name="typeMsg">Type a message</string>
    <string name="typeReview">Type your review</string>
    <string name="addReviewButton">Add review</string>
    <string name="startConvo">Start a conversation</string>
    <string name="removeAlertMessage">Are you sure you want to remove this book from favourites?</string>
    <string name="deleteAlertMessage">Are you sure you want to delete it from the database?</string>
    <string name="publishAlertMessage">Please make sure all the details are correct.</string>
</resources>