<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddBook">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/menuItem3"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_back_white" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="40dp">

            <EditText
                android:id="@+id/userBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter book name" />

            <EditText
                android:id="@+id/publishSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter synopsis"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectGen"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"/>

            <Button
                android:id="@+id/uploadImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadImage"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/uploadPdfbutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/uploadBook"/>

            <Button
                android:id="@+id/publishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>